5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1637_2447.log
== TEST (2019-04-09 11:08:36) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))

if (preco > pag):
	men = (falta,(preco - pag))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    men = (falta,(preco - pag))
NameError: name 'falta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:08:51) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))

if (preco > pag):
	men = (falta,(preco - pag))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    men = (falta,(preco - pag))
NameError: name 'falta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:09:02) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))

if (preco > pag):
	men = ("falta",(preco - pag))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    men = (falta,(preco - pag))
NameError: name 'falta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:09:18) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))

if (preco > pag):
	men = ("falta",(preco - pag))
print(men)
-- OUTPUT:
('falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:09:37) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))

if (preco > pag):
	men = ("falta"(preco - pag))
print(men)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    men = ("falta"(preco - pag))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:09:48) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))

if (preco > pag):
	men = ("falta", (preco - pag))
print(men)
-- OUTPUT:
('falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:11:26) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
if (preco > pag):
	men = (falta,x)
print(men)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    men = (falta,x)
NameError: name 'falta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:11:43) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
if (preco > pag):
	men = ("falta",x)
print(men)
-- OUTPUT:
('falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:13:54) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	men = ("falta",x)
else:
	men = ("Troco de",y)
print(men)
-- OUTPUT:
('falta', 26.0)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:16:42) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("falta",x)
else:
	print("Troco de",y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:02) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("falta",x)
else:
	print("Troco de",y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:12) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("falta",x)
else:
	print("Troco de",y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:17:39) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("falta",x)
else:
	print("Troco de",y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:17:50) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("falta",x)
else:
	print("Troco de",y)
-- EXECUTION TIME:
0.156844
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 11:18:45) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:18:47) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- EXECUTION TIME:
0.180366
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 11:19:42) 
-- CODE:
preco = float(input("digite preco: "))
pag = float(input("digite o pagamento: "))
x = preco - pag
y = pag - preco
if (preco > pag):
	print("Falta",round(x,2))
else:
	print("Troco de",round(y,2))
-- EXECUTION TIME:
0.133273
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
